feat: add rule